Errores de tipeo

--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
             <h3>Felipe Lentini Developer</h3>
         </div>
         <div class="footer-social">
-            <a href="https://github.com/bajo3" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://www.linkedin.com/in/felipe-lentini-927a75212/" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/felipe-lentini-927a75212/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/bajo3" target="_blank"><i class="fab fa-github"></i></a>
         </div>
+        
     </footer>
 
 
