seguimos adaptando el resposnive

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <form>
             <div class="input-group">
                 <label for="valor-auto">Valor del automóvil:</label>
-                <input type="text" id="valor-auto" name="valor-auto" class="required">
+                <input type="number" id="valor-auto" name="valor-auto" class="required">
             </div>
 
             <div class="input-group">
                 <label>Año del auto</label>
-                <input type="text" id="ano-auto" placeholder="Ingrese el año del auto" class="required" />
+                <input type="number" id="ano-auto" placeholder="Ingrese el año del auto" class="required" />
 
             </div>
 
